2 files modified fixed

--- a/index.html
+++ b/index.html
@@ -1,17 +1,15 @@
-  <div class='scene'>
-
+<div class="page">
+  <div class="scene">
     <div class="floor"></div>
-    <div class="cube">
-      <div class="front"></div>
-      <div class="back"></div>
-      <div class="left"></div>
-      <div class="right"></div>
-      <div class="bottom"></div>
-      <div class="top">
-        <div class='ball_shadow'></div>
-      </div>
-    </div>
+    <div class="cube"></div>
+    <div class="front"></div>
+    <div class="back"></div>
+    <div class="left"></div>
+    <div class="right"></div>
+    <div class="bottom"></div>
+    <div class="top"></div>
+    <!-- <div class="ball_shadow"></div> -->
     <div class="ball"></div>
-
-
   </div>
+  <div></div>
+</div>
